--- a/Daijoubu/Daijoubu.Droid/packages.config
+++ b/Daijoubu/Daijoubu.Droid/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Notifications" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Acr.Settings" version="5.1.1" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="monoandroid60" />
   <package id="sqlite-net-pcl" version="1.2.0" targetFramework="monoandroid60" />
   <package id="SQLitePCL.bundle_green" version="0.9.3" targetFramework="monoandroid60" />
   <package id="SQLitePCL.plugin.sqlite3.android" version="0.9.3" targetFramework="monoandroid60" />
@@ -8,6 +11,7 @@
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="monoandroid60" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid60" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.ShortcutBadger" version="1.1.404" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
