--- a/Daijoubu/Daijoubu/Daijoubu.csproj
+++ b/Daijoubu/Daijoubu/Daijoubu.csproj
@@ -39,8 +39,10 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="AppLibrary\Card.cs" />
+    <Compile Include="AppLibrary\IQuiz.cs" />
     <Compile Include="AppLibrary\JapaneseCharacter.cs" />
-    <Compile Include="AppLibrary\QuestionFactory.cs" />
+    <Compile Include="AppLibrary\MultipleChoiceQuestionFactory.cs" />
+    <Compile Include="AppLibrary\TypingQuestionFactory.cs" />
     <Compile Include="AppModel\JapaneseDatabase.cs" />
     <Compile Include="AppModel\tbl_grammar.cs" />
     <Compile Include="AppModel\tbl_kana.cs" />
