--- a/Daijoubu/Daijoubu.Droid/Daijoubu.Droid.csproj
+++ b/Daijoubu/Daijoubu.Droid/Daijoubu.Droid.csproj
@@ -187,7 +187,12 @@
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
-    <AndroidResource Include="Resources\Raw\DaijoubuJapaneseLanguage.sqlite3" />
+    <AndroidResource Include="Resources\Raw\DaijoubuJapaneseLanguage.sqlite3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidResource>
+    <AndroidResource Include="Resources\Raw\userDB.sqlite3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
