optimized srs and kana separation

--- a/Daijoubu/Daijoubu/Daijoubu.csproj
+++ b/Daijoubu/Daijoubu/Daijoubu.csproj
@@ -69,6 +69,9 @@
     <Compile Include="AppPages\QuizPages\ListeningPage.xaml.cs">
       <DependentUpon>ListeningPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AppPages\QuizPages\MCCatSelectPage.xaml.cs">
+      <DependentUpon>MCCatSelectPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AppPages\QuizPages\MultipleChoicePage.xaml.cs">
       <DependentUpon>MultipleChoicePage.xaml</DependentUpon>
     </Compile>
@@ -243,6 +246,12 @@
       <HintPath>..\..\packages\Xamarin.Forms.2.3.2.127\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AppPages\QuizPages\MCCatSelectPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.2.127\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.2.127\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
