ui tests: way hay up she rises

--- a/Daijoubu.UITest/Daijoubu.UITest.csproj
+++ b/Daijoubu.UITest/Daijoubu.UITest.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AISettings.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="AppInitializer.cs" />
   </ItemGroup>
