--- a/Daijoubu/Daijoubu.Droid/Properties/AndroidManifest.xml
+++ b/Daijoubu/Daijoubu.Droid/Properties/AndroidManifest.xml
@@ -3,5 +3,5 @@
 	<uses-sdk android:minSdkVersion="16" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
-	<application android:label="$safeprojectname$"></application>
+	<application android:label="Daijoubu Droid"></application>
 </manifest>
