--- a/Daijoubu/Daijoubu.Droid/Properties/AndroidManifest.xml
+++ b/Daijoubu/Daijoubu.Droid/Properties/AndroidManifest.xml
@@ -3,5 +3,6 @@
 	<uses-sdk android:minSdkVersion="16" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="Daijoubu Droid" android:icon="@drawable/icon"></application>
 </manifest>
